--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/home/home",
     "pages/search/search",
+    "pages/details/details",
     "pages/goods/index",
     "pages/user/index",
     "pages/cart/index"
