--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/home/home",
+    "pages/post/post",
     "pages/search/search",
     "pages/goods/index",
     "pages/user/index",
