[feat]: add features

--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
   "pages": [
     "pages/home/home",
+    "pages/repost/repost",
+    "pages/layout/layout",
     "pages/post/post",
     "pages/search/search",
     "pages/details/details",
@@ -8,6 +10,9 @@
     "pages/user/index",
     "pages/cart/index"
   ],
+  "useExtendedLib": {
+    "weui": true
+  },
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
